--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
-  "name": "larynx",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/RescueOnWheels/Larynx.git"
-  },
-  "author": "RescueOnWheels",
-  "license": "GPL-3.0",
-  "bugs": {
-    "url": "https://github.com/RescueOnWheels/Larynx/issues"
-  },
-  "homepage": "https://github.com/RescueOnWheels/Larynx#readme",
-  "dependencies": {
-    "ip": "^1.1.5",
-    "lcdi2c": "^1.0.6",
-    "socket.io-client": "^2.1.1"
-  }
+    "name": "larynx",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "directories": {
+        "lib": "lib"
+    },
+    "scripts": {
+        "lint": "eslint . --fix",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/RescueOnWheels/Larynx.git"
+    },
+    "author": "RescueOnWheels",
+    "license": "GPL-3.0",
+    "bugs": {
+        "url": "https://github.com/RescueOnWheels/Larynx/issues"
+    },
+    "homepage": "https://github.com/RescueOnWheels/Larynx#readme",
+    "dependencies": {
+        "ip": "1.1.5",
+        "socket.io": "2.1.1"
+    },
+    "devDependencies": {
+        "eslint": "^5.6.0",
+        "eslint-config-airbnb-base": "^13.1.0",
+        "eslint-plugin-import": "^2.14.0"
+    }
 }
