--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "scripts": {
         "lint": "eslint . --fix",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "nyc --reporter=html --reporter=text mocha --exit"
     },
     "repository": {
         "type": "git",
@@ -22,11 +22,15 @@
     "homepage": "https://github.com/RescueOnWheels/Larynx#readme",
     "dependencies": {
         "ip": "1.1.5",
+        "lcdi2c": "1.0.6",
         "socket.io": "2.1.1"
     },
     "devDependencies": {
-        "eslint": "^5.6.0",
-        "eslint-config-airbnb-base": "^13.1.0",
-        "eslint-plugin-import": "^2.14.0"
+        "chai": "4.1.2",
+        "eslint": "5.6.0",
+        "eslint-config-airbnb-base": "13.1.0",
+        "eslint-plugin-import": "2.14.0",
+        "mocha": "5.2.0",
+        "nyc": "13.0.1"
     }
 }
