--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/RescueOnWheels/Larynx#readme",
   "dependencies": {
+    "debug": "4.0.1",
     "ip": "1.1.5",
     "lcdi2c": "1.0.6",
     "socket.io": "2.1.1"
