--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "test"
   },
   "scripts": {
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "dev": "cross-env NODE_ENV=development DEBUG=\"RRS:*\" node ./index.js",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "chai": "4.2.0",
+    "coveralls": "3.0.2",
     "cross-env": "5.2.0",
     "eslint": "5.6.1",
     "eslint-config-airbnb-base": "13.1.0",
