--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,17 @@ language:
   - node_js
 
 node_js:
-  - '8'
+  - 'lts/*'
 
 cache:
   directories:
     - node_modules
 
 before_script:
-  - npm install
+  - npm run lint
 
 script:
-  - npm run lint
   - npm test
+
+after_script:
+  - npm run coveralls
