--- a/package.json
+++ b/package.json
@@ -1,36 +1,43 @@
 {
-    "name": "larynx",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "directories": {
-        "lib": "lib"
-    },
-    "scripts": {
-        "lint": "eslint . --fix",
-        "test": "nyc --reporter=html --reporter=text mocha --exit"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/RescueOnWheels/Larynx.git"
-    },
-    "author": "RescueOnWheels",
-    "license": "GPL-3.0",
-    "bugs": {
-        "url": "https://github.com/RescueOnWheels/Larynx/issues"
-    },
-    "homepage": "https://github.com/RescueOnWheels/Larynx#readme",
-    "dependencies": {
-        "ip": "1.1.5",
-        "lcdi2c": "1.0.6",
-        "socket.io": "2.1.1"
-    },
-    "devDependencies": {
-        "chai": "4.2.0",
-        "eslint": "5.6.1",
-        "eslint-config-airbnb-base": "13.1.0",
-        "eslint-plugin-import": "2.14.0",
-        "mocha": "5.2.0",
-        "nyc": "13.0.1"
-    }
+  "name": "larynx",
+  "version": "1.0.0",
+  "description": "The onboard communication system of the Rover.",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "scripts": {
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "dev": "cross-env NODE_ENV=development DEBUG=\"RRS:*\" node ./index.js",
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix",
+    "test": "nyc --reporter=html --reporter=text mocha --exit"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RescueOnWheels/Larynx.git"
+  },
+  "author": "RescueOnWheels",
+  "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://github.com/RescueOnWheels/Larynx/issues"
+  },
+  "homepage": "https://github.com/RescueOnWheels/Larynx#readme",
+  "dependencies": {
+    "debug": "4.0.1",
+    "ip": "1.1.5",
+    "lcdi2c": "1.0.6",
+    "socket.io": "2.1.1"
+  },
+  "devDependencies": {
+    "chai": "4.2.0",
+    "coveralls": "3.0.2",
+    "cross-env": "5.2.0",
+    "eslint": "5.6.1",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "mocha": "5.2.0",
+    "nyc": "13.0.1"
+  }
 }
