--- a/renovate.json
+++ b/renovate.json
@@ -1,14 +1,14 @@
 {
   "extends": [
-    "config:base",
+    "config:base"
   ],
   "ignoreDeps": [
-    "debug",
+    "debug"
   ],
   "labels": [
-    "Type: Maintenance",
+    "Type: Maintenance"
   ],
   "lockFileMaintenance": {
-    "enabled": false,
-  },
+    "enabled": false
+  }
 }
