--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "debug": "3.1.0",
     "ip": "1.1.5",
     "lcdi2c": "1.0.6",
-    "socket.io": "2.1.1"
+    "socket.io": "2.1.1",
+    "socketio-wildcard": "2.0.0"
   },
   "devDependencies": {
     "chai": "4.2.0",
