--- a/package.json
+++ b/package.json
@@ -3,32 +3,10 @@
   "version": "1.0.0",
   "description": "The onboard communication system of the Rover.",
   "main": "index.js",
-  "directories": {
-    "lib": "lib",
-    "test": "test"
-  },
-  "scripts": {
-    "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "dev": "cross-env NODE_ENV=development DEBUG=RRS:* node ./index.js",
-    "lint": "eslint .",
-    "lint-fix": "eslint . --fix",
-    "prod": "cross-env DEBUG=RRS:* node ./index.js",
-    "test": "nyc --reporter=html --reporter=text mocha --exit"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/RescueOnWheels/Larynx.git"
-  },
-  "author": "RescueOnWheels",
-  "license": "GPL-3.0",
-  "bugs": {
-    "url": "https://github.com/RescueOnWheels/Larynx/issues"
-  },
-  "homepage": "https://github.com/RescueOnWheels/Larynx#readme",
   "dependencies": {
     "debug": "3.1.0",
+    "if-env": "1.0.4",
     "ip": "1.1.5",
-    "lcdi2c": "1.0.6",
     "socket.io": "2.1.1",
     "socketio-wildcard": "2.0.0"
   },
@@ -41,5 +19,31 @@
     "eslint-plugin-import": "2.14.0",
     "mocha": "5.2.0",
     "nyc": "13.0.1"
+  },
+  "optionalDependencies": {
+    "lcdi2c": "1.0.6"
+  },
+  "scripts": {
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "lint": "if-env NODE_ENV=CI && npm run lint:ci || npm run lint:fix",
+    "lint:ci": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "test": "if-env NODE_ENV=CI && npm run test:ci || npm run test:debug",
+    "test:ci": "nyc mocha",
+    "test:debug": "cross-env DEBUG=RRS:* npm run test:ci"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RescueOnWheels/Larynx.git"
+  },
+  "author": "RescueOnWheels",
+  "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://github.com/RescueOnWheels/Larynx/issues"
+  },
+  "homepage": "https://github.com/RescueOnWheels/Larynx#readme",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
   }
 }
