--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
     "lint": "if-env NODE_ENV=CI && npm run lint: || npm run lint:fix",
     "lint:": "eslint .",
     "lint:fix": "eslint . --fix",
+    "start": "if-env npm_config_dev=true && npm run start:dev || if-env npm_config_debug=true && npm run start:debug || npm run start:",
+    "start:": "node ./index.js",
+    "start:debug": "cross-env DEBUG=RRS:* npm run start:",
+    "start:dev": "if-env npm_config_debug=true && cross-env NODE_ENV=development npm run start:debug || cross-env NODE_ENV=development npm run start:",
     "test": "if-env NODE_ENV=CI && npm run test: || if-env npm_config_dev=true && npm run test:dev || if-env npm_config_debug=true && npm run test:debug || npm run test:",
     "test:": "nyc mocha",
     "test:debug": "cross-env DEBUG=RRS:* npm run test:",
-    "test:dev": "if-env npm_config_debug=true && cross-env NODE_ENV=development npm run test:debug || cross-env NODE_ENV=development npm run test:"    
+    "test:dev": "if-env npm_config_debug=true && cross-env NODE_ENV=development npm run test:debug || cross-env NODE_ENV=development npm run test:"
   },
   "repository": {
     "type": "git",
