--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "debug": "3.1.0",
     "if-env": "1.0.4",
     "ip": "1.1.5",
+    "is-online": "7.0.0",
     "socket.io": "2.1.1",
     "socketio-wildcard": "2.0.0"
   },
