--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "test": "if-env NODE_ENV=CI && npm run test: || if-env npm_config_dev=true && npm run test:dev || if-env npm_config_debug=true && npm run test:debug || npm run test:",
     "test:": "nyc mocha",
     "test:debug": "cross-env DEBUG=RRS:* npm run test:",
-    "test:dev": "if-env npm_config_debug=true && cross-env NODE_ENV=development npm run test:debug || cross-env NODE_ENV=development npm run test:"
+    "test:dev": "if-env npm_config_debug=true && cross-env NODE_ENV=development npm run test:debug || cross-env NODE_ENV=development npm run test:",
+    "update": "git submodule update -f & git submodule foreach git pull origin master"
   },
   "repository": {
     "type": "git",
