--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ip": "1.1.5",
     "is-online": "7.0.0",
     "socket.io": "2.1.1",
+    "socket.io-client": "2.1.1",
     "socketio-wildcard": "2.0.0"
   },
   "devDependencies": {
